--- a/src/caculator/cal.css
+++ b/src/caculator/cal.css
@@ -4,10 +4,10 @@
   border-collapse: collapse ;
 } */
 
-button {
+/* button {
   width: 100%;
   height: 100%;
-}
+} */
 
 .input {
   width: 100%;
